# polycopy-trading

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile.agent  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_wallet_trades.py  0002_add_markets.py  0003_add_risk_decisions.py  0004_add_order_sizings.py  0005_add_order_executions.py  0006_relax_order_executions_consistency.py  0007_add_market_resolutions.py  0008_add_expected_avg_price.py  0009_add_side_and_hypothetical_pnl_view.py  0010_pnl_view_sell_support.py  0011_add_discovery_runs.py  0012_add_notifier_config.py  0013_add_tracked_wallets.py  0014_add_wallet_realized_views.py  0015_relax_markets_outcome.py
config/: wallets_seed.example.yaml  wallets_seed.yaml
docs/: PROMPT_POLYCOPY_v2.md
docs/runbooks/: fase-4-first-real-trade.md
infra/prometheus/: prometheus.yml
scripts/: bootstrap-env.sh
src/polycopy/: config.py
tests/: conftest.py  test_smoke.py
tests/integration/: conftest.py  test_db_isolation.py  test_discovery_repository.py  test_executor_e2e.py  test_hypothetical_pnl_view.py  test_infra_connectivity.py  test_jetstream_bus.py  test_leaderboard_live.py  test_market_repository.py  test_market_resolution_repository.py  test_marketdata_e2e.py  test_nats_bus.py  test_notifier_config_repository.py  test_notifier_e2e.py  test_order_execution_repository.py  test_order_sizing_repository.py  test_persistence_smoke.py  test_polymarket_smoke.py  test_polymarket_smoke_executor.py  test_resolver_e2e.py  test_resolver_pnl_metrics.py  test_risk_e2e.py  (+6 more)
(+132 files in other folders)
